<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create_match.CreateMatchActivity"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/ad_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_match_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/match_date_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_match_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="datetime"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_team_1_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/team_1_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/box_match_date_time"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_team_1_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_team_2_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/team_2_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/box_team_1_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_team_2_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_inning_over"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/overs_per_inning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/box_team_2_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_inning_over"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_toss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/toss_won_by"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/box_inning_over"
                />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_toss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:checkedButton="@id/btn_toss_team_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_toss"
                app:selectionRequired="true"
                app:singleSelection="true"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_toss_team_1"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_1"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_toss_team_2"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_2"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_bat_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/which_team_bats_first"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_toss"
                />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_bat_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:checkedButton="@id/btn_bat_first_team_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_bat_first"
                app:selectionRequired="true"
                app:singleSelection="true"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_bat_first_team_1"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_1"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_bat_first_team_2"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_2"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_match_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/match_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_bat_first"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_match_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minEms="10"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/box_match_location"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <include
        android:id="@+id/loader"
        layout="@layout/loader"
        />
</androidx.constraintlayout.widget.ConstraintLayout>